# Gifu

./: Makefile.am  configure.ac
data/images/: Makefile.am
src/: Makefile.am  gifu  util.py
src/actors/: gobanactor.py
src/engine/: board.py  goutil.py
src/review/: reviewwindow.py
src/sgf/: database.py
