dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(gifu, 0.1)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AM_PATH_PYTHON


AC_OUTPUT([
Makefile
data/Makefile
data/images/Makefile
src/Makefile
src/sgf/Makefile
src/library/Makefile
src/engine/Makefile
src/engine/gtp/Makefile
src/review/Makefile
src/actors/Makefile])
